# modules

./: CMakeLists.txt
Plugins/: CMakeLists.txt  compile_shaders.py
Plugins/nosFilters/Config/: ColorCorrect.nosdef
Plugins/nosMath/Source/: Math.cpp
Plugins/nosNoise/Source/: PluginMain.cpp
Plugins/nosReflect/: Reflect.noscfg
Plugins/nosReflect/Source/: Arithmetic.cpp  Array.cpp  Make.cpp  PluginMain.cpp
Plugins/nosTest/Source/: FrameInterpolator.cpp  Test.cpp
Plugins/nosTest/Source/Window/: WindowNode.cpp  WindowNode.h
Plugins/nosUtilities/Source/: CPUSleep.cpp  ReadImage.cpp  Sink.cpp
Subsystems/: CMakeLists.txt
Subsystems/nosPython/Source/: Python.cpp
